--- a/index.html
+++ b/index.html
@@ -74,6 +74,16 @@
           <a href="https://www.naver.com" class="sidebar-link">Naver</a>
         </div>
       </div>
+      <div id="myModal" class="modal">
+        <div class="modal-content">
+          <span class="close" id="closeBtn">&times;</span>
+          <label for="urlInput">URL:</label>
+          <input type="text" id="urlInput" />
+          <label for="textInput">Text:</label>
+          <input type="text" id="textInput" />
+          <button id="addLinkBtn">링크 추가하기</button>
+        </div>
+      </div>
     </div>
     <script src="./js/greetings.js"></script>
     <script src="./js/clock.js"></script>
