--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
       <iframe
         width="300"
         height="169"
-        src="https://www.youtube.com/embed/9bVSIv2p7zw?si=aQaPj3AneW4UnlLW"
+        src="https://www.youtube.com/embed/KAKd8k0jGn4?si=nXrK31RxzPmR-lAf"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         allowfullscreen
-        class="styled-iframe"
       ></iframe>
 
       <div class="main_clock">
