--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
           />
         </form>
       </div>
+      <div class="mylover" onclick="toggleLove()">
+        <i class="fa-regular fa-heart"></i>
+        <img id="loverImage" src="#" alt="Lover Image" />
+      </div>
       <div class="sidebar">
         <div class="main_todo">
           <form id="todo-form">
@@ -108,6 +112,7 @@
     <script src="./js/addlink.js"></script>
     <script src="./js/search.js"></script>
     <script src="./js/date.js"></script>
+    <script src="./js/mylover.js"></script>
 
     <script
       src="https://kit.fontawesome.com/fd8936dbd6.js"
